# cross-platform-test

./: README.md
demo-electron/: package-lock.json  package.json
demo-electron/src/main/: main.ts
demo-electron/src/renderer/: App.tsx
demo-qt/: demo-qt.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mousewidget.cpp  mousewidget.h  tcpclient.cpp  tcpclient.h  ztcpclient.cpp  ztcpclient.h
demo_flutter/: README.md  pubspec.yaml
demo_flutter/android/app/: build.gradle
demo_flutter/ios/Runner.xcodeproj/: project.pbxproj
demo_flutter/lib/: Page1.dart  Page2.dart  Page3.dart  main.dart  tcp_client.dart
demo_flutter/macos/Runner.xcodeproj/: project.pbxproj
demo_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
demo_flutter/web/: index.html
demo_flutter/windows/: CMakeLists.txt
lib-net/: CMakeLists.txt  build-win.bat  vcpkg.json
lib-net/src/Common/: CMakeLists.txt  Common.cpp  Common.h
lib-net/src/Core/: CMakeLists.txt  Core.cpp  Core.h
lib-net/src/Main/: CMakeLists.txt  main.cpp
lib-net/src/Net/: CMakeLists.txt  Net.cpp  Net.h
lib-net/src/Net/http/: HttpClient.cpp  HttpClient.h  HttpClient_p.h  HttpCommon.h  HttpServer.cpp  HttpServer.h  HttpServer_p.h
lib-net/src/Net/tcp/: TcpClient.cpp  TcpClient.h  TcpClient_p.h  TcpCommon.h  TcpServer.cpp  TcpServer.h  TcpServer_p.h
server/: mainwindow.cpp  mainwindow.ui  server.pro  serverwidget.cpp  serverwidget.h  serverwidget.ui  ztcpserver.cpp  ztcpserver.h
